gtk/gtknotebook.h
@@ -217,9 +217,9 @@ void     gtk_notebook_set_scrollable       (GtkNotebook     *notebook,
 					    gboolean         scrollable);
 GDK_AVAILABLE_IN_ALL
 gboolean gtk_notebook_get_scrollable       (GtkNotebook     *notebook);
-GDK_AVAILABLE_IN_ALL
+GDK_DEPRECATED_IN_3_4
 guint16  gtk_notebook_get_tab_hborder      (GtkNotebook     *notebook);
-GDK_AVAILABLE_IN_ALL
+GDK_DEPRECATED_IN_3_4
 guint16  gtk_notebook_get_tab_vborder      (GtkNotebook     *notebook);
 
 /***********************************************************
